# zinc

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  architecture.md  license.txt  readme.md
android/: AndroidManifest.xml
cmake/: check_android_icons.cmake
install/wininstaller/config/: config.xml
ios/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
qml/: Main.qml
qml/components/: Block.qml  BlockEditor.qml  BlockEditorEnterLogic.js  CursorMotionIndicatorLogic.js  DatePickerPopup.qml  DesktopSidebarActions.qml  ImageFileDialog.qml  InlineFormatBar.qml  InlinePagePickerPopup.qml  MarkdownEditor.qml  MobileSidebarActions.qml  PageTree.qml  QRCodeImage.qml  ScrollMath.js  SearchDialog.qml  SlashMenu.qml  SyncButtons.qml
qml/components/blocks/: CodeBlock.qml  ColumnsBlock.qml  DividerBlock.qml  HeadingBlock.qml  ImageBlock.qml  LinkBlock.qml  ParagraphBlock.qml  QuoteBlock.qml  TodoBlock.qml  ToggleBlock.qml
qml/dialogs/: PagePickerDialog.qml  PairingDialog.qml  PairingDialogQrPane.qml  QRCodeDialog.qml  SettingsDialog.qml  ShortcutsDialog.qml  SyncConflictDialog.qml
qml/dialogs/settings/: AboutSettingsPage.qml  DataSettingsPage.qml  DevicesSettingsPage.qml  EditorSettingsPage.qml  GeneralSettingsPage.qml  KeyboardShortcutsSettingsPage.qml  SettingsButton.qml  SettingsComboBox.qml  SettingsPage.qml  SettingsRow.qml  SettingsSection.qml  SettingsSwitch.qml  SyncSettingsPage.qml
qml/editor/: EditorPreferences.qml
qml/preferences/: GeneralPreferences.qml  ShortcutPreferences.qml
qml/sync/: SyncPreferences.qml
qml/theme/: Theme.qml  ThemeManager.qml  qmldir
scripts/: regenerate_android_launcher_icons.sh
src/: main.cpp
src/assets/default_pages/My_Notebook/: Getting_Started.md  Personal.md  Projects.md
src/core/: block_types.cpp  block_types.hpp  commands.cpp  commands.hpp  fractional_index.cpp  fractional_index.hpp  page.cpp  page.hpp  result.hpp  search.cpp  search.hpp  three_way_merge.cpp  three_way_merge.hpp  types.cpp  types.hpp  workspace.cpp  workspace.hpp
src/crypto/: encryption.cpp  encryption.hpp  keys.cpp  keys.hpp  noise_session.cpp  noise_session.hpp
src/network/: discovery.cpp  discovery.hpp  discovery_datagram.cpp  discovery_datagram.hpp  hello_policy.hpp  pairing.cpp  pairing.hpp  sync_manager.cpp  sync_manager.hpp  transport.cpp  transport.hpp  udp_discovery_backend.cpp  udp_discovery_backend.hpp
src/platform/android/: android_utils.cpp  android_utils.hpp  nsd_discovery.cpp
src/platform/linux/: avahi_discovery.cpp
src/storage/: block_repository.cpp  block_repository.hpp  crdt_repository.cpp  crdt_repository.hpp  database.cpp  database.hpp  migrations.cpp  migrations.hpp  page_repository.cpp  page_repository.hpp  workspace_repository.cpp  workspace_repository.hpp
src/ui/: AttachmentImageProvider.cpp  AttachmentImageProvider.hpp  Clipboard.cpp  Clipboard.hpp  Cmark.cpp  Cmark.hpp  DataStore.cpp  DataStore.hpp  FeatureFlags.cpp  FeatureFlags.hpp  FontUtils.cpp  FontUtils.hpp  InlineFormatting.cpp  InlineFormatting.hpp  InlineRichText.cpp  InlineRichText.hpp  InlineRichTextHighlighter.cpp  InlineRichTextHighlighter.hpp  MarkdownBlocks.cpp  MarkdownBlocks.hpp  QrScanner.cpp  QrScanner.hpp  logging.cpp  logging.hpp  qml_types.cpp  qml_types.hpp
src/ui/cli/: list_tree.cpp  list_tree.hpp  mutations.cpp  mutations.hpp  note.cpp  note.hpp
src/ui/controllers/: EditorController.cpp  EditorController.hpp  PairingController.cpp  PairingController.hpp  SyncController.cpp  SyncController.hpp  sync_presence.cpp  sync_presence.hpp
src/ui/models/: BlockModel.cpp  BlockModel.hpp  PageTreeModel.cpp  PageTreeModel.hpp  SearchResultModel.cpp  SearchResultModel.hpp
tests/integration/: test_discovery_datagram.cpp  test_main.cpp  test_storage_roundtrip.cpp  test_sync.cpp
tests/property/: prop_crdt_convergence.cpp  prop_fractional_index.cpp  prop_main.cpp
tests/qml/: test_attachments_disk_storage.cpp  test_block_editor_backspace_delete_empty_block_qml.cpp  test_block_editor_cursor_visibility_qml.cpp  test_block_editor_enter_logic_qml.cpp  test_block_editor_home_end_shortcuts_qml.cpp  test_block_editor_remote_refresh_focus_qml.cpp  test_block_model.cpp  test_block_model_undo.cpp  test_cli_list_tree.cpp  test_cli_mutations.cpp  test_cli_note.cpp  test_cmark.cpp  test_code_block_qml.cpp  test_cursor_motion_indicator_logic_qml.cpp  test_database_close_clears_ui_qml.cpp  test_datastore_default_pages_content.cpp  test_datastore_export.cpp  test_datastore_file_drop_import.cpp  test_datastore_import.cpp  test_datastore_lifetime.cpp  test_datastore_notebooks.cpp  test_datastore_sync.cpp  test_delete_notebook_dialog_qml.cpp  test_desktop_sidebar_actions_qml.cpp  test_devices_settings_connect_feedback_qml.cpp  test_editor_gutter_settings_qml.cpp  test_editor_mode_settings.cpp  test_export_folder_settings.cpp  test_external_link_tooltip_qml.cpp  test_feature_flags.cpp  test_formatting_shortcuts_qml.cpp  test_hello_policy.cpp  test_image_block_interactions.cpp  test_inline_format_bar_qml.cpp  test_inline_formatting.cpp  test_inline_highlighter_binding_loop.cpp  test_inline_rich_text.cpp  test_keyboard_shortcuts_settings_qml.cpp  test_main.cpp  test_main_reconnect_qml.cpp  (+27 more)
tests/unit/: test_block_types.cpp  test_commands.cpp  test_fractional_index.cpp  test_main.cpp  test_result.cpp  test_storage.cpp  test_three_way_merge.cpp
tools/: sync_connect_endpoint_check.cpp  sync_hello_check.cpp
